--- a/figmastyle.css
+++ b/figmastyle.css
@@ -21,10 +21,22 @@ body{
     padding: auto;
 }
 .language-s{background-color: transparent;
-color: white;
-border: 1px solid white;
-padding: 5px;
-border-radius: 5px ;}
+    color: white;
+    border: 1px solid white;
+    border: none;
+    padding: 8px 12px ;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    }
+    .flag-icon{
+        width: 24px;
+        height: auto;
+    }
+    
 .header i:hover{
     border: 1px solid rgb(167, 84, 28);}
     
@@ -184,4 +196,53 @@ border-radius: 5px ;}
     height: 100vh;
     background-color: #4caf50;
     width: 100%;
+}
+.categories-section {
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.crops-list, .all-categories-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.crop-item {
+  text-align: center;
+}
+
+.crop-item img {
+  width: 2000px;
+  height: 500px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+}
+
+
+.products-section {
+  padding: 40px 20px;
+}
+
+.product-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.product-card {
+  border: 1px solid #ddd;
+  padding: 15px;
+  text-align: center;
+  border-radius: 8px;
+  width: 220px; /* कार्ड की चौड़ाई */
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
 }
