--- a/figmastyle.css
+++ b/figmastyle.css
@@ -13,7 +13,7 @@ body{
 .header-t{
     margin: auto;
     justify-content: center;
-}
+}                      
 .header i{
     color:aliceblue;
     font-size: 20px;
@@ -278,7 +278,7 @@ body{
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
-    -webkit-overflow-scrolling: touch; /* iOS smoothness 
+    -webkit-overflow-scrolling: touch; /* iOS smoothness */
     padding: 10px;
 }
 
